package maidsafe.vault.protobuf;
option optimize_for = LITE_RUNTIME;

message PmidRecord {
  required bytes pmid_name = 1;
  required int64 historic_stored_space = 2;
  required int64 historic_lost_space = 3;
  required int64 claimed_available_size = 4;
}

message DataElement {
  required int32 type = 1;
  required bytes name = 2;
  required int32 size = 3;
}

message PmidAccount {
  required PmidRecord pmid_record = 1;
  repeated DataElement recent_data_stored = 2;
}
